(a) updates related to metro/composition to improve handling in startup sequencing (b) changes to depot (in progress) to enabled improved bootstrap launching